# bluetooth-serial-port

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md
src/: BTSerialPortBinding.h  BluetoothException.h  DeviceINQ.h  Enums.cc  Enums.h
src/capi/: Error.cc  Error.h  bt_api.cc  bt_api.h  bt_config.h  bt_export.h  bt_impl.h
src/linux/: BTSerialPortBinding.cc  DeviceINQ.cc
src/osx/: BTSerialPortBinding.mm  BluetoothWorker.h  BluetoothWorker.mm  DeviceINQ.mm  btScan.mm
src/windows/: BTSerialPortBinding.cc  BluetoothHelpers.cc  BluetoothHelpers.h  DeviceINQ.cc
test/: main.cpp  main_c.cc
